--- a/ecommerce-product/src/main/resources/application.yml
+++ b/ecommerce-product/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: product-service
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/ecommerce_product?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
@@ -28,4 +33,10 @@ eureka:
 logging:
   level:
     com.ecommerce: DEBUG
+
+# 文件上传配置
+file:
+  upload:
+    path: ./uploads
+    url-prefix: /uploads
 
